--- a/tao/locales/nl-NL/basicauth.rdf.po
+++ b/tao/locales/nl-NL/basicauth.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: TAO 3.4.0-sprint124\n"
-"PO-Revision-Date: 2020-03-13T09:37:47\n"
+"PO-Revision-Date: 2020-03-20T11:16:55\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: nl-NL\n"
@@ -13,15 +13,15 @@ msgstr ""
 # http://www.tao.lu/Ontologies/TAO.rdf#BasicAuthConsumer
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Basic Auth Credentials"
-msgstr ""
+msgstr "Basis Auth Credentials"
 
 # http://www.tao.lu/Ontologies/TAO.rdf#BasicAuthLogin
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Login"
-msgstr ""
+msgstr "Inloggen"
 
 # http://www.tao.lu/Ontologies/TAO.rdf#BasicAuthPassword
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Password"
-msgstr ""
+msgstr "Wachtwoord"
 
