--- a/taoDeliveryRdf/locales/nl-NL/widgetdefinitions.rdf.po
+++ b/taoDeliveryRdf/locales/nl-NL/widgetdefinitions.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint115\n"
-"PO-Revision-Date: 2019-11-22T11:22:54\n"
+"Project-Id-Version: TAO 3.4.0-sprint124\n"
+"PO-Revision-Date: 2020-03-20T11:17:05\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: nl-NL\n"
@@ -13,10 +13,10 @@ msgstr ""
 # http://www.tao.lu/datatypes/WidgetDefinitions.rdf#DeliveryTestRunnerFeature
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Test Runner Feature"
-msgstr ""
+msgstr "Testrunner functie"
 
 # http://www.tao.lu/datatypes/WidgetDefinitions.rdf#DeliveryTestRunnerFeature
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "allow a user to toggle test runner features per delivery"
-msgstr ""
+msgstr "biedt een gebruiker de mogelijkheid om per publicatie te wisselen tussen de functies van de testrunner"
 
