--- a/taoItems/locales/fr-FR/category.rdf.po
+++ b/taoItems/locales/fr-FR/category.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint121\n"
-"PO-Revision-Date: 2020-01-31T09:56:06\n"
+"Project-Id-Version: TAO 3.4.0-sprint124\n"
+"PO-Revision-Date: 2020-03-20T08:13:48\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: fr-FR\n"
@@ -13,10 +13,10 @@ msgstr ""
 # http://www.tao.lu/Ontologies/TAOItem.rdf#ExposeCategory
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Expose to category auto-add"
-msgstr ""
+msgstr "Exposer à l'ajout automatique de catégories"
 
 # http://www.tao.lu/Ontologies/TAOItem.rdf#ExposeCategory
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Property expose the property to category auto-add"
-msgstr ""
+msgstr "Exposer la propriété à l'ajout automatique de catégorie"
 
