--- a/taoItems/locales/fr-FR/indexation.rdf.po
+++ b/taoItems/locales/fr-FR/indexation.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint121\n"
-"PO-Revision-Date: 2020-01-31T09:56:06\n"
+"Project-Id-Version: TAO 3.4.0-sprint124\n"
+"PO-Revision-Date: 2020-03-20T08:13:48\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: fr-FR\n"
@@ -13,20 +13,20 @@ msgstr ""
 # http://www.tao.lu/Ontologies/TAOItem.rdf#ItemContentTokenizer
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Item Content Tokenizer"
-msgstr ""
+msgstr "Parseur de contenu d'item"
 
 # http://www.tao.lu/Ontologies/TAOItem.rdf#ItemContentTokenizer
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Tokenizer using the item content"
-msgstr ""
+msgstr "Parseur utilisant le contenu de l'item"
 
 # http://www.tao.lu/Ontologies/TAOItem.rdf#ItemModelIndex
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Item Model Index"
-msgstr ""
+msgstr "Index du modèle d'item"
 
 # http://www.tao.lu/Ontologies/TAOItem.rdf#ItemContentIndex
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Item Content Index"
-msgstr ""
+msgstr "Index du contenu de l'item"
 
