--- a/taoItems/locales/fr-FR/taoItemRunner.rdf.po
+++ b/taoItems/locales/fr-FR/taoItemRunner.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint121\n"
-"PO-Revision-Date: 2020-01-31T09:56:06\n"
+"Project-Id-Version: TAO 3.4.0-sprint124\n"
+"PO-Revision-Date: 2020-03-20T08:13:48\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: fr-FR\n"
@@ -58,5 +58,5 @@ msgstr "Item Runner"
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#ServiceItemRunner
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Embed a run an item into a Delivery. This service initialize the TAO Apis and contexts"
-msgstr ""
+msgstr "Intègre un item dans une passation. Ce service initialise les APIs TAO et les contextes."
 
