--- a/taoItems/locales/nl-NL/category.rdf.po
+++ b/taoItems/locales/nl-NL/category.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint121\n"
-"PO-Revision-Date: 2020-01-31T09:56:07\n"
+"Project-Id-Version: TAO 3.4.0-sprint124\n"
+"PO-Revision-Date: 2020-03-20T11:16:56\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: nl-NL\n"
@@ -18,5 +18,5 @@ msgstr ""
 # http://www.tao.lu/Ontologies/TAOItem.rdf#ExposeCategory
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Property expose the property to category auto-add"
-msgstr ""
+msgstr "Eigenschap blootstellen aan categorie auto-add"
 
