--- a/taoOutcomeUi/locales/fr-FR/messages.po
+++ b/taoOutcomeUi/locales/fr-FR/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint112\n"
-"PO-Revision-Date: 2019-10-11T09:48:40\n"
+"Project-Id-Version: TAO 3.4.0-sprint124\n"
+"PO-Revision-Date: 2020-03-20T08:14:01\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: fr-FR\n"
@@ -15,211 +15,211 @@ msgstr ""
 
 #, tao-public
 msgid " "
-msgstr ""
+msgstr " "
 
 msgid "Add All grades"
-msgstr ""
+msgstr "Ajouter toutes les notes"
 
 msgid "Add All responses"
-msgstr ""
+msgstr "Ajouter toutes les réponses"
 
 msgid "Add Delivery"
-msgstr ""
+msgstr "Ajouter la passation de test"
 
 msgid "Add Delivery Execution"
 msgstr ""
 
 msgid "Add Test Taker"
-msgstr ""
+msgstr "Ajouter les participants"
 
 msgid "Adding/Updating search index for %s"
-msgstr ""
+msgstr "Ajouter ou mettre à jour l'index de recherche pour %s"
 
 msgid "All collected variables"
-msgstr ""
+msgstr "Toutes les variables collectées"
 
 msgid "Anonymise"
-msgstr ""
+msgstr "Rendre anonyme"
 
 msgid "Class"
-msgstr ""
+msgstr "Classe"
 
 msgid "CSV results export for delivery \"%s"
-msgstr ""
+msgstr "Export CSV des résultats pour la passation de test \"%s"
 
 msgid "CSV results export for delivery class \"%s"
-msgstr ""
+msgstr "Export CSV des résultats pour la classe de passation de test \"%s"
 
 msgid "Delete"
-msgstr ""
+msgstr "Supprimer"
 
 msgid "Delivery"
-msgstr ""
+msgstr "Passation"
 
 msgid "Delivery Execution"
-msgstr ""
+msgstr "Exécution d'une passation de test"
 
 msgid "Download"
-msgstr ""
+msgstr "Téléchargement"
 
 msgid "Download result"
-msgstr ""
+msgstr "Télécharger le résultat"
 
 msgid "Email:"
-msgstr ""
+msgstr "Courriel :"
 
 msgid "End Delivery Execution"
 msgstr ""
 
 msgid "Error"
-msgstr ""
+msgstr "Erreur"
 
 #, tao-public
 msgid "Export CSV"
-msgstr ""
+msgstr "Exporter en CSV"
 
 msgid "Export CSV File"
-msgstr ""
+msgstr "Exporter le fichier CSV"
 
 #, tao-public
 msgid "Export Table"
-msgstr ""
+msgstr "Exporter la table"
 
 msgid "Filter"
-msgstr ""
+msgstr "Filtrer"
 
 msgid "Filters"
 msgstr ""
 
 msgid "First Name:"
-msgstr ""
+msgstr "Prénom :"
 
 msgid "First submitted variables only"
-msgstr ""
+msgstr "Uniquement les premières variables soumises"
 
 msgid "Grades"
-msgstr ""
+msgstr "Niveaux"
 
 msgid "Label"
-msgstr ""
+msgstr "Étiquette"
 
 msgid "Label:"
-msgstr ""
+msgstr "Étiquette :"
 
 msgid "Last Name:"
-msgstr ""
+msgstr "Nom:"
 
 msgid "Last submitted variables only"
-msgstr ""
+msgstr "Uniquement les dernières variables soumises"
 
 msgid "Login:"
-msgstr ""
+msgstr "Nom d'utilisateur :"
 
 #, tao-public
 msgid "Manage Results"
-msgstr ""
+msgstr "Gérer les résultats"
 
 msgid "No tests have been taken yet. As soon as a test-taker will take a test his results will be displayed here."
-msgstr ""
+msgstr "Aucun test n'a encore été passé. Dès qu'un participant passera un test, ses résultats seront affichés ici."
 
 msgid "Please confirm deletion"
-msgstr ""
+msgstr "Veuillez confirmer la suppression."
 
 msgid "Preview"
 msgstr ""
 
 msgid "Remove All grades"
-msgstr ""
+msgstr "Enlever toutes les notes"
 
 msgid "Remove All responses"
-msgstr ""
+msgstr "Enlever toutes les réponses"
 
 msgid "Remove Delivery"
-msgstr ""
+msgstr "Enlever la passation de test"
 
 msgid "Remove Delivery Execution"
 msgstr ""
 
 msgid "Responses"
-msgstr ""
+msgstr "Réponses"
 
 msgid "Result has been deleted"
-msgstr ""
+msgstr "Le résultat a été supprimé."
 
 #, tao-public
 msgid "Results"
-msgstr ""
+msgstr "Résultats"
 
 #, tao-public
 msgid "Results library"
-msgstr ""
+msgstr "Bibliothèque de résultats"
 
 msgid "Results monitoring"
-msgstr ""
+msgstr "Surveillance des résultats"
 
 #, tao-public
 msgid "Results Monitoring"
-msgstr ""
+msgstr "Surveillance des résultats"
 
 msgid "Review"
-msgstr ""
+msgstr "Révision"
 
 msgid "Search by delivery results"
-msgstr ""
+msgstr "Rechercher par résultats de passation"
 
 msgid "Search by results"
-msgstr ""
+msgstr "Rechercher par résultats"
 
 msgid "Something went wrong..."
-msgstr ""
+msgstr "Quelque chose s'est mal passé..."
 
 msgid "Start Delivery Execution"
 msgstr ""
 
 msgid "Start Time"
-msgstr ""
+msgstr "Heure de début"
 
 msgid "Test Taker"
-msgstr ""
+msgstr "Participant"
 
 msgid "Test taker"
-msgstr ""
+msgstr "Participant"
 
 msgid "Test Taker ID"
 msgstr ""
 
 msgid "Test Variables"
-msgstr ""
+msgstr "Variables de test"
 
 msgid "The class you have selected contains no results to be analysed, please select a different class"
-msgstr ""
+msgstr "La classe sélectionnée ne contient pas de résultat à analyser, veuillez en choisir une autre."
 
 msgid "The number of observations is too low"
-msgstr ""
+msgstr "Le nombre d'observations est trop faible."
 
 msgid "There was a problem generating your report, please try again."
-msgstr ""
+msgstr "Il y a eu un souci lors de la génération de votre rapport, veuillez réessayer."
 
 #, tao-public
 msgid "Tools"
-msgstr ""
+msgstr "Outils"
 
 msgid "Traces"
-msgstr ""
+msgstr "Traces"
 
 msgid "unknown"
-msgstr ""
+msgstr "inconnu"
 
 msgid "Variables"
 msgstr ""
 
 msgid "View"
-msgstr ""
+msgstr "Aperçu"
 
 #, tao-public
 msgid "View and format the collected results."
-msgstr ""
+msgstr "Voir et formater les résultats collectés."
 
 msgid "We are preparing your report, please wait..."
-msgstr ""
+msgstr "Votre rapport est en préparation, veuillez patienter..."
 
