--- a/taoOutcomeUi/locales/fr-FR/reviewerRole.rdf.po
+++ b/taoOutcomeUi/locales/fr-FR/reviewerRole.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint112\n"
-"PO-Revision-Date: 2019-10-11T09:48:40\n"
+"Project-Id-Version: TAO 3.4.0-sprint124\n"
+"PO-Revision-Date: 2020-03-20T08:14:01\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: fr-FR\n"
@@ -13,10 +13,10 @@ msgstr ""
 # http://www.tao.lu/Ontologies/TAOResult.rdf#TaoReviewerRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Reviewer Role"
-msgstr ""
+msgstr "Rôle d'examinateur"
 
 # http://www.tao.lu/Ontologies/TAOResult.rdf#TaoReviewerRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Allow a reviewer Role to fetch item content and delivery results"
-msgstr ""
+msgstr "Permettre à un rôle d'examinateur de récupérer le contenu d'un item et les résultats d'une passation de test"
 
