--- a/taoOutcomeUi/locales/fr-FR/taoresult.rdf.po
+++ b/taoOutcomeUi/locales/fr-FR/taoresult.rdf.po
@@ -1,14 +1,18 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v3.0\n"
-"PO-Revision-Date: 2014-10-21T07:53:06\n"
-"Last-Translator: TAO Translation Team <translation@tao.lu>\n"
-"MIME-Version: 1.0\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2020-03-19 15:49+0200\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fr-FR\n"
-"sourceLanguage: en-US\n"
-"targetLanguage: fr-FR\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Translate Toolkit 2.2.5\n"
+"X-Pootle-Path: /fr-FR/tao33/taoOutcomeUi/taoresult.rdf.po\n"
+"X-Pootle-Revision: 26635\n"
 
 # http://www.tao.lu/Ontologies/TAOResult.rdf#DeliveryResult
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
@@ -68,7 +72,9 @@ msgstr "Result Identifier"
 # http://www.tao.lu/Ontologies/TAOResult.rdf#Identifier
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Result Identifier"
-msgstr "An identifier related to the instanciation of a delivery a test an item or a variable . If the item is used twice, different ids are setup"
+msgstr ""
+"An identifier related to the instanciation of a delivery a test an item or a "
+"variable . If the item is used twice, different ids are setup"
 
 # http://www.tao.lu/Ontologies/TAOResult.rdf#Variable
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
@@ -189,4 +195,3 @@ msgstr "TAO Result Server 2.5 (DB storage)"
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "TAO Result Server 2.5 (DB storage)"
 msgstr "TAO Result Server 2.5 (using DB storage)"
-
