--- a/taoOutcomeUi/locales/nl-NL/reviewerRole.rdf.po
+++ b/taoOutcomeUi/locales/nl-NL/reviewerRole.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint112\n"
-"PO-Revision-Date: 2019-10-11T09:48:40\n"
+"Project-Id-Version: TAO 3.4.0-sprint124\n"
+"PO-Revision-Date: 2020-03-20T11:17:06\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: nl-NL\n"
@@ -18,5 +18,5 @@ msgstr ""
 # http://www.tao.lu/Ontologies/TAOResult.rdf#TaoReviewerRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Allow a reviewer Role to fetch item content and delivery results"
-msgstr ""
+msgstr "Sta een beoordelaar toe de inhoud van een item en de resultaten van de publicatie op te halen."
 
