updated French and Dutch translation from Pootle

--- a/taoProctoring/locales/fr-FR/proctoring.rdf.po
+++ b/taoProctoring/locales/fr-FR/proctoring.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint122\n"
-"PO-Revision-Date: 2020-02-28T12:48:15\n"
+"Project-Id-Version: TAO 3.4.0-sprint124\n"
+"PO-Revision-Date: 2020-03-20T08:14:02\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: fr-FR\n"
@@ -18,27 +18,27 @@ msgstr "Surveillant"
 # http://www.tao.lu/Ontologies/TAOProctor.rdf#ProctorRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "The Proctoring role"
-msgstr "Rôle de surveillant"
+msgstr "Le rôle de surveillance"
 
 # http://www.tao.lu/Ontologies/TAOProctor.rdf#ProctorManager
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Proctor Manager"
-msgstr "Responsable de surveillance"
+msgstr "Gestionnaire de surveillant"
 
 # http://www.tao.lu/Ontologies/TAOProctor.rdf#ProctorManager
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "The Proctoring Manager Role"
-msgstr "Rôle de responsable de la surveillance"
+msgstr "Le rôle de gestionnaire de surveillance"
 
 # http://www.tao.lu/Ontologies/TAOProctor.rdf#ProctorAdministratorRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Proctor Administrator"
-msgstr "Administrateur de surveillance"
+msgstr "Administrateur de la surveillance"
 
 # http://www.tao.lu/Ontologies/TAOProctor.rdf#ProctorAdministratorRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "The Proctoring Administrator Role"
-msgstr "Rôle d'administrateur de la surveillance"
+msgstr "Le rôle d'administrateur de la surveillance"
 
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#DeliveryExecutionStatusAwaiting
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
@@ -48,7 +48,7 @@ msgstr "En attente"
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#DeliveryExecutionStatusAwaiting
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Awaiting of authorization status of a delivery execution"
-msgstr "En attente du statut d'autorisation pour l'exécution d'une prestation"
+msgstr "En attente d'autorisation de l'exécution d'une passation de test"
 
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#DeliveryExecutionStatusAuthorized
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
@@ -58,7 +58,7 @@ msgstr "Autorisé"
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#DeliveryExecutionStatusAuthorized
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Authorized status of a delivery execution"
-msgstr "Statut Autorisé de l'exécution d'une prestation"
+msgstr "État autorisé de l'exécution d'une passation de test"
 
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#DeliveryExecutionStatusTerminated
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
@@ -68,7 +68,7 @@ msgstr "Terminé"
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#DeliveryExecutionStatusTerminated
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Terminated status of a delivery execution"
-msgstr "Statut Terminé de l'exécution d'une prestation"
+msgstr "État terminé de l'exécution d'une passation de test"
 
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#DeliveryExecutionStatusCanceled
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
@@ -78,17 +78,17 @@ msgstr "Annulé"
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#DeliveryExecutionStatusCanceled
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Canceled status of a delivery execution"
-msgstr "Statut Annulé de l'exécution d'une prestation"
+msgstr "État annulé de l'exécution d'une passation de test"
 
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#ProctorAccessible
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Require Proctoring"
-msgstr "Demander une surveillance"
+msgstr "Nécessite la surveilance"
 
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#ProctorAccessible
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Require Proctoring on selected deliveries"
-msgstr "Demander une surveillance sur les prestations sélectionnées"
+msgstr "Nécessite la surveillance sur des passations de test sélectionnées"
 
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#CheckMode
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
@@ -109,9 +109,4 @@ msgstr "Activer"
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Enable"
 msgstr "Activer"
-
-# http://www.tao.lu/Ontologies/TAOProctor.rdf#ProctorAdministratorRole
-msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
-msgid "The Proctoring Administrator role"
-msgstr "Rôle d'administrateur de la surveillance"
 
