--- a/taoDelivery/locales/de-DE/messages.po
+++ b/taoDelivery/locales/de-DE/messages.po
@@ -73,7 +73,7 @@ msgstr "TAO Gastzugang"
 msgid "Test-Takers"
 msgstr "Testnutzer"
 
-msgid "Tests Home"
+msgid "Go back to tests selection"
 msgstr ""
 
 msgid "This test needs to be taken in full screen mode"
