--- a/taoDelivery/locales/de-DE/messages.po
+++ b/taoDelivery/locales/de-DE/messages.po
@@ -37,6 +37,9 @@ msgstr "Vollbild anzeigen"
 msgid "Exit"
 msgstr "Beenden"
 
+msgid "Go back to tests selection"
+msgstr "Kehren Sie zur Testauswahl zurück"
+
 msgid "Guest access"
 msgstr "Gastzugang"
 
@@ -72,9 +75,6 @@ msgstr "TAO Gastzugang"
 
 msgid "Test-Takers"
 msgstr "Testnutzer"
-
-msgid "Go back to tests selection"
-msgstr ""
 
 msgid "This test needs to be taken in full screen mode"
 msgstr "Dieser Test muss im Vollbildmodus durchgeführt werden"
