--- a/taoDelivery/locales/lt-LT/messages.po
+++ b/taoDelivery/locales/lt-LT/messages.po
@@ -37,6 +37,9 @@ msgstr "Pereiti į viso ekrano rodymą"
 msgid "Exit"
 msgstr "Išeiti"
 
+msgid "Go back to tests selection"
+msgstr ""
+
 msgid "Guest access"
 msgstr "Svečio prisijungimas"
 
@@ -72,9 +75,6 @@ msgstr "TAO Svečio prisijungimas"
 
 msgid "Test-Takers"
 msgstr "Testo Laikytojai"
-
-msgid "Tests Home"
-msgstr "Testų Namai"
 
 msgid "This test needs to be taken in full screen mode"
 msgstr "Šis testas turi būti sprendžiamas įjungus viso ekrano rodymą"
