--- a/taoDelivery/locales/es-MX/messages.po
+++ b/taoDelivery/locales/es-MX/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint123\n"
-"PO-Revision-Date: 2020-02-28T14:05:41\n"
+"Project-Id-Version: TAO 3.4.0-sprint125\n"
+"PO-Revision-Date: 2020-03-27T10:25:13\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: es-MX\n"
@@ -52,8 +52,14 @@ msgstr "Mis exámenes"
 msgid "Resume"
 msgstr "Reanudar"
 
+msgid "Resume button"
+msgstr ""
+
 msgid "Start"
 msgstr "Empezar"
+
+msgid "Start button"
+msgstr ""
 
 msgid "Started at %s"
 msgstr "Comenzó a las %s"
@@ -78,6 +84,9 @@ msgstr ""
 
 msgid "This test needs to be taken in full screen mode"
 msgstr "Esta prueba debe tomarse en modo de pantalla completa"
+
+msgid "To activate press enter"
+msgstr ""
 
 msgid "You are no longer allowed to take this test"
 msgstr "Ya no tiene permiso para tomar esta prueba"
