--- a/taoDelivery/locales/pt-PT/messages.po
+++ b/taoDelivery/locales/pt-PT/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint123\n"
-"PO-Revision-Date: 2020-02-28T14:05:41\n"
+"Project-Id-Version: TAO 3.4.0-sprint125\n"
+"PO-Revision-Date: 2020-03-27T10:25:14\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: pt-PT\n"
@@ -52,7 +52,13 @@ msgstr ""
 msgid "Resume"
 msgstr ""
 
+msgid "Resume button"
+msgstr ""
+
 msgid "Start"
+msgstr ""
+
+msgid "Start button"
 msgstr ""
 
 msgid "Started at %s"
@@ -77,6 +83,9 @@ msgid "Tests Home"
 msgstr ""
 
 msgid "This test needs to be taken in full screen mode"
+msgstr ""
+
+msgid "To activate press enter"
 msgstr ""
 
 msgid "You are no longer allowed to take this test"
